force-app/main/default/objects/FixMyStreet_Comments__c/FixMyStreet_Comments__c.object-meta.xml
<CustomObject>
    <label>FixMyStreet Comments</label>
    <nameField>
        <displayFormat>Comment-{00000}</displayFormat>
        <label>FixMyStreet Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FixMyStreet Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>