force-app/main/default/objects/FixMyStreet_Comments__c/fields/Comment_By__c.field-meta.xml
<CustomField>
    <fullName>Comment_By__c</fullName>
    <label>Comment By</label>
    <length>200</length>
    <type>Text</type>
</CustomField>