force-app/main/default/objects/FixMyStreet_Comments__c/fields/Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Date__c</fullName>
    <label>Comment Date</label>
    <type>DateTime</type>
</CustomField>