force-app/main/default/objects/FixMyStreet_Comments__c/fields/Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Comment_Id__c</fullName>
    <label>Comment Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>