force-app/main/default/objects/FixMyStreet_Comments__c/fields/FixMyStreet__c.field-meta.xml
<CustomField>
    <fullName>FixMyStreet__c</fullName>
    <label>FixMyStreet</label>
    <referenceTo>FixMyStreet__c</referenceTo>
    <relationshipLabel>FixMyStreet Comments</relationshipLabel>
    <relationshipName>FixMyStreet_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>